// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render with header and footer 1`] = `
<div
  className="creasy-card "
>
  <div
    className="creasy-card__header"
  >
    <Header />
  </div>
  <div
    className="creasy-card__body"
  >
    <Content />
  </div>
  <div
    className="creasy-card__footer"
  >
    <Footer />
  </div>
</div>
`;

exports[`Card should render without header and footer 1`] = `
<div
  className="creasy-card "
>
  <div
    className="creasy-card__body"
  >
    <Content />
  </div>
</div>
`;
